more select changes

--- a/components_demo.html
+++ b/components_demo.html
@@ -2373,6 +2373,7 @@
 
 <script type="module">
 // used for the select component matrix
+// provides example data and builds all the select components
 
 import { SelectManager } from './components/select/select_manager.js';
 
